src/App.css
html,body {
  font-family: 'Montserrat', sans-serif !important;
  color:#fff;
  overflow-x: hidden;
}
h3 {
  font-size:20px !important;
}
.navbar {
  padding:0px !important;
}
.navbar-home {
  position: absolute;
}
.btn-clear {
  background-color:transparent !important;
  border:1px solid #fff !important;
  padding:10px 25px 10px 25px !important;
}
.btnabout {
  margin-top:35px;
}
.grecp {
  background-color:rgba(0,0,0,0.4);
  width:auto !important;
  padding:50px 80px 70px 80px !important;
  flex-grow:0 !important;
  border-left:5px solid #fff;
}
.sc .svg-container {
  width:80% !important;
}
.top {
display: -webkit-box;
display: -webkit-flex;
display: -ms-flexbox;
display: flex;
-webkit-box-align: center;
-webkit-align-items: center;
-ms-flex-align: center;
align-items: center;
min-height:100vh;
height: -webkit-fill-available;
background-blend-mode: multiply;
background-color:rgba(0,0,0,0.2);
}
.top {
  @supports (-webkit-appearance:none) {
    .os-android & {
      min-height: calc(100vh - 56px);
    }
  }
}
.sidebar-brand a {
  font-size:13px;
}
.sidebar-brand {
  background-color:#131313;
  border-bottom:1px solid #fff;
  margin-bottom:20px;
}
.first {
  background: #f7f7f7;
  transition: all 2s;
  color:#000;
}
.top i {
color:#f7f7f7;
}
.headline h1 {
  font-weight: 800;
font-size:55px !important;
color:rgb(255, 255, 255);
}
.smalldev p {
  font-weight: 400;
font-size: 20px;
color:#fff;
}
.contact {
  font-weight:200;
  margin-top:60px;
  color:#fff;
}
.corner {
  position: absolute;
  margin-top:-50px;
}
a {
  color:rgb(241, 241, 241) !important;
}
a:hover {
  color:#d3d3d3 !important; 
  text-decoration: none !important;
}
.test {
  height:100%;
  position: absolute;
  background-color:aliceblue;
}
.nav .open > a, 
.nav .open > a:hover, 
.nav .open > a:focus {background-color: transparent;}

.custom-list {
  list-style: none;
  padding: 0;
  margin: 0;
  margin-top:15px;
 margin-left:-15px;
}

.custom-list li {
  padding-left: 1em; 
  text-indent: -.7em;
  margin-left:15px;
}
@media (max-width:768px) {
  .projects img {
    margin-top:15px;
  }
}
.custom-list li::before {
  color: red;
}
.tools li::before{
color: #2893ff;
}
.other li::before{
  color: #2b2b2b;
}
.white {
  background-color:#fff;
  padding:25px !important;
  border-top: 8px solid #566873;
}
.bottommore {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  bottom:0;
  text-align: center;
  padding-bottom:40px;
}
.ccr {
  padding:18px 22px 18px 22px;
  font-size:25px;

}
.about {
  background: #3f4c6b;
background: -moz-linear-gradient(top, #3f4c6b 0%, #3f4c6b 100%);
background: -webkit-linear-gradient(top, #3f4c6b 0%,#3f4c6b 100%);
background: linear-gradient(to bottom, #3f4c6b 0%,#3f4c6b 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f4c6b', endColorstr='#3f4c6b',GradientType=0 );
  padding:120px 0px 140px 0px;
  color:#fff;
  text-align: center;
}
@media(min-width:950px) {
  .innerabout {
      padding:0px 100px 0px 100px !important;
  }
}
.about p {
  color:#cecece !important;
}
.blocksections {
  padding:50px;
  border-radius: 15px;
  border:1px solid #e8e8e8;
  margin-top:-50px;
  background-color:#FFFFFF;
  text-align: center;
}
.blocksections img {
  margin-bottom:30px !important;
}
@media(min-width:768px) {
  .blocksections .col-md-4 {
      border-left: 2px solid #e8e8e8;
  }
  .blocksections .col-md-4:first-child {
      border-left: none;
  }
}
@media(max-width:768px) {
  .blocksections .col-md-4 img {
      margin-bottom:10px !important;
  }
  .blocksections .col-md-4:not(:first-child) {
      margin-top: 40px;
  }
}
.technologies ul {
  display:inline-block;
  list-style-type: none;
  padding:0px !important;
}
.technologies li {
  background-color:#e2e2e2;
  padding:8px;
  display:inline-block;
  border-radius:3px;
  font-size:11px;
  margin-right:10px;
}
.projects {
  margin-top:50px;
}
.projects p {
  font-size:15px;
}
.projects .small {
  font-weight:500;
}
.projects .row {
  padding-top:50px;
  padding-bottom:50px;
}
.projects hr {
  border-color:rgb(226, 226, 226) !important;
}
@media(min-width:992px) {
  .projects .row:hover img {
    -webkit-filter: grayscale(0%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
    filter: grayscale(0%); /* FF 35+ */
  }
  .projects img {
    width:120%;
    margin-left:-20%;
    transition: filter .5s ease-in-out;
    -webkit-filter: grayscale(50%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
    filter: grayscale(50%); /* FF 35+ */
  }
  .projects .col-md-5 {
    z-index:-1
  }
  .order-first {
    text-align: right;
  }
  .order-first+div img {
    margin-left:0 !important;
  }
  .description {
    padding: 50px !important;
  }
}
.description {
  background-color: #f3f3f3;
  padding: 30px;
  z-index:1;
}
.btn-view {
  background-color:transparent !important;
  border:1px solid #3F4C6B !important;
  color:#3F4C6B !important;
  font-size:14px !important;
}
.btn-view:hover {
  border:1px solid rgb(40, 50, 73) !important;
  color:rgb(40, 50, 73) !important;
}
.btn-view-solid {
  background-color:#3F4C6B !important;
  border:1px solid #3F4C6B !important;
  color:#fff !important;
  font-size:14px !important;
}
.btn-view-solid:hover {
  border:1px solid rgb(40, 50, 73) !important;
  background-color:rgb(40, 50, 73) !important;
  color:#fff;
}
.links a:first-child {
  margin-right:10px;
}
.nprow {
  padding-top:0px !important;
  padding-bottom:0px !important;
}
.darklink {
  color:#3F4C6B !important;
  font-weight:bold;
}
.darklink:hover {
  color:rgb(39, 47, 68) !important; 
}
footer {
  background: #3f4c6b;
  background: -moz-linear-gradient(top, #3f4c6b 0%, #3f4c6b 100%);
  background: -webkit-linear-gradient(top, #3f4c6b 0%,#3f4c6b 100%);
  background: linear-gradient(to bottom, #3f4c6b 0%,#3f4c6b 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f4c6b', endColorstr='#3f4c6b',GradientType=0 );
  padding:70px 0px 70px 0px;
  color:#fff;
  text-align: center;
  margin-top:50px;
}
footer a {
  font-size:30px;
  margin:20px;
}
/*-------------------------------*/
/*           Wrappers            */
/*-------------------------------*/

#wrapper {
  padding-left: 0;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

#wrapper.toggled {
  padding-left: 220px;
}

#sidebar-wrapper {
  z-index: 1000;
  width: 220px;
  height: 100%;
  margin-left: -220px;
  overflow-y: auto;
  overflow-x: hidden;
  background: #1a1a1a;

position:fixed;
}

#sidebar-wrapper::-webkit-scrollbar {
display: none;
}

#wrapper.toggled #sidebar-wrapper {
  width: 220px;
}

#page-content-wrapper {
  width: 100%;
}

#wrapper.toggled #page-content-wrapper {
  position: absolute;
  margin-right: -220px;
}

/*-------------------------------*/
/*     Sidebar nav styles        */
/*-------------------------------*/

.sidebar-nav {
  position: absolute;
  top: 0;
  width: 220px;
  margin: 0;
  padding: 0;
  list-style: none;
}

.sidebar-nav li {
  position: relative; 
  line-height: 20px;
  display: inline-block;
  width: 100%;
}

.sidebar-nav li:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  height: 100%;
  width: 3px;
  background-color: #1c1c1c;
  -webkit-transition: width .2s ease-in;
    -moz-transition:  width .2s ease-in;
     -ms-transition:  width .2s ease-in;
          transition: width .2s ease-in;

}

.sidebar-nav li:hover:before,
.sidebar-nav li.open:hover:before {
  width: 100%;
  -webkit-transition: width .2s ease-in;
    -moz-transition:  width .2s ease-in;
     -ms-transition:  width .2s ease-in;
          transition: width .2s ease-in;

}

.sidebar-nav li a {
  display: block;
  color: #ddd;
  text-decoration: none;
  padding: 10px 15px 10px 30px;
  font-weight: 200;
}

.sidebar-nav li a:hover,
.sidebar-nav li a:active,
.sidebar-nav li a:focus,
.sidebar-nav li.open a:hover,
.sidebar-nav li.open a:active,
.sidebar-nav li.open a:focus{
  color: #fff;
  text-decoration: none;
  background-color: transparent;
}

.sidebar-nav > .sidebar-brand {
  height: 65px;
  font-size: 20px;
  line-height: 44px;
}
.sidebar-nav .dropdown-menu {
  position: relative;
  width: 100%;
  padding: 0;
  margin: 0;
  border-radius: 0;
  border: none;
  background-color: #222;
  box-shadow: none;
}

/*-------------------------------*/
/*       Hamburger-Cross         */
/*-------------------------------*/

.hamburger {
position: fixed;
top: 20px;  
z-index: 999;
display: block;
width: 32px;
height: 32px;
margin-left: 15px;
background: transparent;
border: none;
}
.hamburger:hover,
.hamburger:focus,
.hamburger:active {
outline: none;
}
.hamburger.is-closed:before {
content: '';
display: block;
width: 100px;
font-size: 14px;
color: #fff;
line-height: 32px;
text-align: center;
opacity: 0;
-webkit-transform: translate3d(0,0,0);
-webkit-transition: all .35s ease-in-out;
}
.hamburger.is-closed:hover:before {
opacity: 1;
display: block;
-webkit-transform: translate3d(-100px,0,0);
-webkit-transition: all .35s ease-in-out;
}

.hamburger.is-closed .hamb-top,
.hamburger.is-closed .hamb-middle,
.hamburger.is-closed .hamb-bottom,
.hamburger.is-open .hamb-top,
.hamburger.is-open .hamb-middle,
.hamburger.is-open .hamb-bottom {
position: absolute;
left: 0;
height: 2px;
width: 100%;
}
.hamburger.is-closed .hamb-top,
.hamburger.is-closed .hamb-middle,
.hamburger.is-closed .hamb-bottom {
background-color: #fff;
}
.hamburger.is-closed .hamb-top { 
top: 5px; 
-webkit-transition: all .2s ease-in-out;
}
.hamburger.is-closed .hamb-middle {
top: 50%;
margin-top: -2px;
}
.hamburger.is-closed .hamb-bottom {
bottom: 6px;  
-webkit-transition: all .2s ease-in-out;
}

.hamburger.is-closed:hover .hamb-top {
top: 0;
-webkit-transition: all .2s ease-in-out;
}
.hamburger.is-closed:hover .hamb-bottom {
bottom: 0;
-webkit-transition: all .2s ease-in-out;
}
.hamburger.is-open .hamb-top,
.hamburger.is-open .hamb-middle,
.hamburger.is-open .hamb-bottom {
background-color: #fff;
}
.hamburger.is-open .hamb-top,
.hamburger.is-open .hamb-bottom {
top: 50%;
margin-top: -2px;  
}
.hamburger.is-open .hamb-top { 
-webkit-transform: rotate(45deg);
-webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
}
.hamburger.is-open .hamb-middle { display: none; }
.hamburger.is-open .hamb-bottom {
-webkit-transform: rotate(-45deg);
-webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
}
.hamburger.is-open:before {
content: '';
display: block;
width: 100px;
font-size: 14px;
color: #fff;
line-height: 32px;
text-align: center;
opacity: 0;
-webkit-transform: translate3d(0,0,0);
-webkit-transition: all .35s ease-in-out;
}
.hamburger.is-open:hover:before {
opacity: 1;
display: block;
-webkit-transform: translate3d(-100px,0,0);
-webkit-transition: all .35s ease-in-out;
}
#circle5, #circle7, #circle9 {
margin-top:-50px;
}
/*-------------------------------*/
/*            Overlay            */
/*-------------------------------*/

.overlay {
  position: fixed;
  display: none;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.6);
  z-index: 1;
}

